Make sure to always add base tag info before setting any other attributes.  Bug 201998, r=jkeiser, sr=jst